<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="@dimen/app_padding"
    android:stretchColumns="*"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/msg_debut_changer_air"
            android:textColor="@color/msg_debut"
            android:textSize="@dimen/text_size_10sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="3"
            android:text="@string/msg_debut_estimation"
            android:textColor="@color/msg_debut"
            android:textSize="@dimen/text_size_10sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="3"
            android:text="@string/msg_debut_prolonge_ou_pas"
            android:textColor="@color/msg_debut"
            android:textSize="@dimen/text_size_10sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_span="3"
            android:contentDescription="@string/content_description_avion"
            android:src="@drawable/avion" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nb_jours"
            android:textSize="@dimen/text_size_10sp" />
    </TableRow>


    <RadioGroup
        android:id="@+id/radioGroupNbJours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_span="3"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton2Jours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/radio_btn_margin"
            android:checked="true"
            android:text="@string/nb_nuit_2" />

        <RadioButton
            android:id="@+id/radioButton3Jours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/radio_btn_margin"
            android:text="@string/nb_nuit_3" />

        <RadioButton
            android:id="@+id/radioButton4Jours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/radio_btn_margin"
            android:text="@string/nb_nuit_4" />

        <RadioButton
            android:id="@+id/radioButton5Jours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/radio_btn_margin"
            android:text="@string/nb_nuit_5" />
    </RadioGroup>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_budget_transport"
            android:textSize="@dimen/text_size_10sp" />

        <EditText
            android:id="@+id/editTextBudgetTransport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:hint="@string/hint_budget_transport"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_10sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_budget_par_nuit"
            android:textSize="@dimen/text_size_10sp" />

        <EditText
            android:id="@+id/editTextBudgetParNuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:hint="@string/hint_budget_par_nuit"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_10sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_budget_par_repas"
            android:textSize="@dimen/text_size_10sp" />

        <EditText
            android:id="@+id/editTextBudgetParRepas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:hint="@string/hint_budget_par_repas"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_10sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBoxInclure2RepasDernierJour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/label_inclure_2_repas_dernier_jour"
            android:textSize="@dimen/text_size_10sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_budget_visites"
            android:textSize="@dimen/text_size_10sp" />

        <EditText
            android:id="@+id/editTextBudgetVisites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:hint="@string/hint_budget_visites"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_10sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_estimation"
            android:textSize="@dimen/text_size_10sp" />

        <EditText
            android:id="@+id/textViewEstimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:focusable="false"
            android:hint="@string/hint_estimation"
            android:textSize="@dimen/text_size_10sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCalculer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:onClick="calculer"
            android:text="@string/btn_calculer"
            android:textSize="@dimen/text_size_10sp" />

        <Button
            android:id="@+id/buttonAnnuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:onClick="annuler"
            android:text="@string/btn_annuler"
            android:textSize="@dimen/text_size_10sp" />
    </TableRow>


</TableLayout>